Cannot use ATOK Moji Pallet until typing first character even after fixing bug 1549930
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Tracking
()
People
(Reporter: masayuki, Assigned: masayuki)
References
(Regression)
Details
(Keywords: inputmethod, regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This is old regression at 57 (due to bug 1349255), but we should fix this on 68 for ESR and Thunderbird users who use ATOK or some other a11y tools which inputs text into inactive window.
When user moves focus to an editable content in a content process, it posts IME-focus notification to the main process. Then, when the main process prepares IME/keyboard handling in editable content, it posts back IME notification requests to the content process. Then, the content process's PuppetWidget
modifies its IME notification requests, but not modifying cache of IME notification requests in its TextEventDispatcher
. Therefore, IMEContentObserver
keep referring older IME notification requests which are initialized without IME-focus (FYI: IMEContentObserver
caches the reference of cached IME notification requests in TextEventDispatcher
. So, we need to refresh only the cache of IME notification requests in TextEventDispatcher
).
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 1•6 years ago
|
||
When user moves focus to an editable content in a content process, it posts
IME-focus notification to the main process. Then, when the main process
prepares IME/keyboard handling in editable content, it posts back IME
notification requests to the content process. Then, the content process's
PuppetWidget
modifies its IME notification requests, but not modifying
cache of IME notification requests in its TextEventDispatcher
. Therefore,
IMEContentObserver
keep referring older IME notification requests which are
initialized without IME-focus. Note that IMEContentObserver
caches the
reference of cached IME notification requests in TextEventDispatcher
.
So, we need to refresh only the cache of IME notification requests in
TextEventDispatcher
.
Updated•6 years ago
|
Comment 3•6 years ago
|
||
bugherder |
Assignee | ||
Updated•6 years ago
|
Comment 4•6 years ago
|
||
Please nominate this for Beta approval if you want it to be considered for 68.
Assignee | ||
Comment 5•6 years ago
|
||
Yeah, once bug 1549930 is fixed in beta, I'll do that. Otherwise, it does not worthwhile to uplift this.
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9068001 [details]
Bug 1554843 - Make PuppetWidget::NotifyIMEOfFocusChange() notify TextEventDispatcher of IME notification requests change
Beta/Release Uplift Approval Request
- User impact if declined: ATOK users cannot input unusual characters from its virtual keyboard called "Moji pallet" even after uplifting bug 1549930. Note that there might be similar a11y tools or something which steals focus and inputting text into last active window.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1549930
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This just makes
PuppetWidget
notify itsTextEventDispatcher
of changing IME focused widget. - String changes made/needed: none
Comment 7•6 years ago
|
||
Comment on attachment 9068001 [details]
Bug 1554843 - Make PuppetWidget::NotifyIMEOfFocusChange() notify TextEventDispatcher of IME notification requests change
ime fix for 68.0b12
Comment 8•6 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Description
•