Bug 1554843 - Make PuppetWidget::NotifyIMEOfFocusChange() notify TextEventDispatcher of IME notification requests change. r=m_kato, a=jcristau

When user moves focus to an editable content in a content process, it posts
IME-focus notification to the main process. Then, when the main process
prepares IME/keyboard handling in editable content, it posts back IME
notification requests to the content process. Then, the content process's
`PuppetWidget` modifies its IME notification requests, but **not** modifying
cache of IME notification requests in its `TextEventDispatcher`. Therefore,
`IMEContentObserver` keep referring older IME notification requests which are
initialized without IME-focus.  Note that `IMEContentObserver` caches the
*reference* of cached IME notification requests in `TextEventDispatcher`.
So, we need to refresh only the cache of IME notification requests in
`TextEventDispatcher`.

Differential Revision: https://phabricator.services.mozilla.com/D32821

--HG--
extra : source : 0553541318c4d5b7aba2a9b195470db9dc5c782e
extra : histedit_source : 8227154c2768edce6ef6d31d8fa2070529327755